v0.77.1.17:
	- Fix for bPermissions removing it's .has() function.
v0.77.1.18:
	- Allow killing of mobs in the wilderness for worlds with PVP disabled.
v0.77.1.19:
	- Changed wild permission nodes to accept negation after '*'. You can now use wild perms as a whitelist and blacklist.
	  If using GroupManager or any system which accepts wildcards...
	    to use as a whitelist, use the existing...
	      towny.wild.block.{id}.*
	    to use as a blacklist...
	      towny.wild.*
	      -towny.wild.block.{id}.*
v0.77.1.20:
	- Fixed towny.wild.block.{id}... to allow overriding of Admin permissions.
	- Fixed a typo on towny.town.toggle.explosions
	- Mayors and assistants can once again change the plot type on resident owned plots.
v0.77.1.21:
	- Fixed world loading of the force town mobs setting.
	- Fixed wild perms for non admins.
v0.77.1.22:
	- Fix for bPerms and super perms not supporting wildcards.
	- Wild block ignore permissions no longer fall back to world settings, if set to use a permissions provider.
v0.77.1.23:
	- Removed spammy wilderness action messages.
v0.77.1.24:
	- Added comments to World data files.
	- Extended default wild regen setting to 20 seconds.
	- Added a german translation file Set to german in config.
	- Fixed processing of GM/PEX events.
v0.77.1.25:
	- Allow op to override in all permissions.
v0.77.1.26:
	- When loading data files assistants will only be added to the town if they are also a resident (no more errors).
	- Mayors of other towns can no longer perform '/plot set perm reset' in your town.
	- Fixed '/town claim auto'... again.
	- Fixed a NullPointerException in SetDefaultModes task caused by another plugin kicking a player at login.
	- New functions allowing Townychat to observe Essentials mute and ignore functions.
v0.77.1.27:
	- Added a kick function to '/townyadmin town <name> kick []..[]'.
	- Monsters killed in an area plot no longer drop any loot.
	- refactoring of some code.